Monitoring/kubernetes-prometheus-operator/jaeger-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracing-np
  namespace: istio-system
  labels:
    app: jaeger
spec:
  type: NodePort
  ports:
    - name: http-query
      port: 80
      protocol: TCP
      targetPort: 16686
      nodePort: 30002
    # Note: Change port name if you add '--query.grpc.tls.enabled=true'
    - name: grpc-query
      port: 16685
      protocol: TCP
      targetPort: 16685
      nodePort: 30003
  selector:
    app: jaeger
