Monitoring/kubernetes-prometheus-operator/istio-ingress-s0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: s0-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s0
spec:
  hosts:
  - "*"
  gateways:
  - s0-gateway
  http:
  - match:
    - uri:
        prefix: /s0
    rewrite:
      uri: "/api/v1"
    route:
    - destination:
        port:
          number: 80
        host: s0
