Monitoring/kubernetes-prometheus-operator/s0-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1
  name: s0-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /s0
        pathType: Prefix
        backend:
          service:
            name: s0
            port: 
              number: 80
